--- a/goa project 2.0/style.css
+++ b/goa project 2.0/style.css
@@ -1,11 +1,11 @@
 *{
     margin: 0;
     padding: 0;
+    background-color: rgb(47, 49, 73);
 }
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(images/1.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -75,8 +75,8 @@ nav img{
     cursor: pointer;
 }
 .hero-btn:hover{
-    border: 1px solid #f44366;
-    background: #f44366;
+    border: 1px solid #fff;
+    background: rgb(72, 75, 109);
     transition: 1s;
 }
 nav .fa{
@@ -121,6 +121,10 @@ nav .fa{
     margin: auto;
     text-align: center;
     padding-top: 100px;
+}
+.row { 
+    display: flex;
+    flex-direction: row;
 }
 h1{
     font-size: 36px;
